--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,16 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^10.0",
+        "illuminate/contracts": "^10.0|^11.0",
         "laravel/pulse": "^1.0@beta",
-        "spatie/laravel-package-tools": "^1.14.0"
+        "spatie/laravel-package-tools": "^1.16.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^7.8",
-        "orchestra/testbench": "^8.8",
-        "pestphp/pest": "^2.20",
+        "nesbot/carbon": "^2.63",
+        "nunomaduro/collision": "^7.8|^8.1",
+        "orchestra/testbench": "^8.0|^9.0",
+        "pestphp/pest": "^2.31",
         "pestphp/pest-plugin-arch": "^2.0",
         "pestphp/pest-plugin-laravel": "^2.0"
     },
