--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.1",
         "illuminate/contracts": "^10.0|^11.0",
-        "laravel/pulse": "^1.0@beta",
+        "laravel/pulse": "^1.0",
         "spatie/laravel-package-tools": "^1.16.0"
     },
     "require-dev": {
