--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -2,20 +2,26 @@ name: run-tests
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   test:
     runs-on: ${{ matrix.os }}
+
     strategy:
       fail-fast: true
       matrix:
-        os: [ ubuntu-latest, windows-latest ]
-        php: [ 8.1, 8.2, 8.3 ]
-        laravel: [ 10, 11 ]
-        stability: [ prefer-lowest, prefer-stable ]
+        os: [ubuntu-latest, windows-latest]
+        php: [8.1, 8.2, 8.3]
+        laravel: [10, 11, '12']
+        stability: [prefer-lowest, prefer-stable]
+        exclude:
+          - laravel: '12'
+            php: 8.1
 
     name: P${{ matrix.php }} - L${{ matrix.laravel }} - ${{ matrix.stability }} - ${{ matrix.os }}
 
