--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,18 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^10.0|^11.0",
+        "illuminate/contracts": "^10.0|^11.0|^12.0",
         "laravel/pulse": "^1.0",
         "spatie/laravel-package-tools": "^1.16.0"
     },
     "require-dev": {
         "laravel/pint": "^1.3",
-        "nesbot/carbon": "^2.63",
+        "nesbot/carbon": "^2.63|^3.8.4",
         "nunomaduro/collision": "^7.8|^8.1",
-        "orchestra/testbench": "^8.23.1|^9.0",
-        "pestphp/pest": "^2.31",
-        "pestphp/pest-plugin-arch": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0"
+        "orchestra/testbench": "^8.23.1|^9.0|^10.0",
+        "pestphp/pest": "^2.31|^3.7",
+        "pestphp/pest-plugin-arch": "^2.0|^3.0",
+        "pestphp/pest-plugin-laravel": "^2.0|^3.1"
     },
     "autoload": {
         "psr-4": {
